[package]
name = "rust-lzxpress"
version = "0.5"
authors = ["Matt Suiche <msuiche@comae.com>"]
description = "Simple interface for Microsoft LZXpress decompression."
edition = "2018"
readme = "README.md"
keywords = ["lxpress", "decompression", "ms-xca"]
repository = "https://github.com/comaeio/rust-lzxpress"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
license = "MIT"

[lib]
name = "lzxpress"

[dependencies]
