[package]
name = "rust-lzxpress"
version = "0.7.1"
authors = ["Matt Suiche <msuiche@comae.com>"]
description = "Simple interface for Microsoft LZXpress decompression."
edition = "2018"
readme = "README.md"
keywords = ["lxpress", "lznt1", "decompression", "ms-xca"]
repository = "https://github.com/comaeio/rust-lzxpress"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
license = "MIT"

[lib]
name = "lzxpress"

[dependencies]

[target.'cfg(windows)'.dependencies]
ntapi = "0.3.6"

[build-dependencies]
cc = "1.0"